# ESP32_Example_Private

./: README.md
spi_master/: sdkconfig  sdkconfig.old
spi_master/components/QRcode/: CMakeLists.txt
spi_master/main/: CMakeLists.txt  spi_master_example_main.cpp
